Modified and removed the audit log